# dpll-test-repo

./: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp
.github/workflows/: check-clang-format.py  check-clang-tidy.py  run-tests.yml
algorithm/: dimacs_loader.cpp  dimacs_loader.hpp  dpll.cpp  dpll.hpp
tests/: CMakeLists.txt  install_gtests.sh  test_algorithm.cpp  test_loading.cpp
tests/files/: comments.cnf  empty_lines.cnf
tests/files/heavy/jnh/: move.py
tests/files/light/: 2.cnf  unsat2.cnf
utils/: dimacs_loader.cpp  dimacs_loader.h  dimacs_loader.hpp  dpll.cpp  dpll.h
